--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-second-project2",
+  "name": "tattoo-website",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -13,11 +13,12 @@
     "@angular/animations": "^17.2.1",
     "@angular/common": "^17.2.1",
     "@angular/compiler": "^17.2.1",
-    "@angular/core": "^17.2.1",
+    "@angular/core": "^17.3.4",
     "@angular/forms": "^17.2.1",
     "@angular/platform-browser": "^17.2.1",
     "@angular/platform-browser-dynamic": "^17.2.1",
     "@angular/router": "^17.2.1",
+    "all": "^0.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.4"
