--- a/.firebaserc
+++ b/.firebaserc
@@ -3,7 +3,7 @@
     "rising-sun-artistry": {
       "hosting": {
         "tattoo-website": [
-          "tattoo-website"
+          "rising-sun-artistry"
         ]
       }
     }
