--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~5.4.3"
+    "typescript": "~5.4.3",
+    "vite": "^5.2.11"
   }
 }
