--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "source": ".",
+    "public": "dist/tattoo-website",
     "ignore": [
       "firebase.json",
       "**/.*",
